[package]
name = "rhq"
description = "A repository management tool"
version = "0.4.0-dev"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT"
repository = "https://github.com/ubnt-intrepid/rhq.git"
readme = "README.md"
edition = "2018"

[package.metadata.deb]
assets = [
  ["target/release/rhq", "usr/bin/rhq", "755"],
]

[dependencies]
dirs = "1"
exitfailure = "0.5"
failure = "0.1.5"
lazy_static = "1.3"
regex = "1.1"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.2"
shellexpand = "1.0"
toml = "0.5"
url = "1.7"

[lib]
name = "rhq"
path = "src/lib.rs"

[[bin]]
name = "rhq"
path = "src/main.rs"
doc = false
