[package]
name = "rhq"
description = "A repository management tool"
version = "0.4.0-dev"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT"
repository = "https://github.com/ubnt-intrepid/rhq.git"
readme = "README.md"

[package.metadata.deb]
assets = [
    ["target/release/rhq", "usr/bin/rhq", "755"],
]

[lib]
name = "rhq"
path = "src/lib.rs"

[[bin]]
name = "rhq"
path = "src/bin/rhq/main.rs"

[dependencies]
anyhow = "1"
better-panic = "0.2"
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
dirs = "2"
glob = "0.3"
lazy_static = "1"
pretty_env_logger = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "1"
toml = "0.5"
url = "2"
walkdir = "2"
