[package]
name = "rhq-core"
description = "Core library for rhq"
version = "0.2.10"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT"
repository = "https://github.com/ubnt-intrepid/rhq.git"
homepage = "https://github.com/ubnt-intrepid/rhq"
documentation = "https://docs.rs/rhq"
readme = "../../README.md"

[lib]
path = "lib.rs"

[dependencies]
error-chain = "0.11"
regex = "^0.2.1"
shellexpand = "1.0"
toml = "0.4"
url = "1.5"
walkdir = "^1.0.7"
shlex = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "^0.2.5"
glob = "0.2.11"
chrono = { version = "0.4", features = ["serde"] }
