[package]
name = "rhq"
description = "A repository management tool"
version = "0.2.10"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT"
repository = "https://github.com/ubnt-intrepid/rhq.git"
homepage = "https://github.com/ubnt-intrepid/rhq"
documentation = "https://docs.rs/rhq"
readme = "../../README.md"

[[bin]]
name = "rhq"
path = "main.rs"

[dependencies]
clap = "^2.20.3"
env_logger = "^0.4.0"
rhq-core = { version = "0.2.10", path = "../rhq-core" }
